cloudformation/vpc.yml
Resources:

    ####################################################################################################################
    # VPC
    ####################################################################################################################
    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: 10.0.0.0/16
            EnableDnsSupport: true
            EnableDnsHostnames: true
            InstanceTenancy: default
            Tags:
                - Key: Name
                  Value: "meetup-spot-instances"


    ####################################################################################################################
    # Internet Gateway
    ####################################################################################################################
    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref AWS::StackName
    VPCGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
          InternetGatewayId: !Ref InternetGateway
          VpcId: !Ref VPC


    ####################################################################################################################
    # NAT Gateways
    ####################################################################################################################
    NatGateway1:
        DependsOn: VPCGatewayAttachment
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt EIP1.AllocationId
            SubnetId: !Ref PublicSubnet1
            Tags:
                - Key: Name
                  Value: !Ref AWS::StackName
    EIP1:
        Type: AWS::EC2::EIP
        Properties:
            Domain: !Ref VPC

    NatGateway2:
        DependsOn: VPCGatewayAttachment
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt EIP2.AllocationId
            SubnetId: !Ref PublicSubnet2
            Tags:
                - Key: Name
                  Value: !Ref AWS::StackName
    EIP2:
        Type: AWS::EC2::EIP
        Properties:
            Domain: !Ref VPC

    NatGateway3:
        DependsOn: VPCGatewayAttachment
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt EIP3.AllocationId
            SubnetId: !Ref PublicSubnet3
            Tags:
                - Key: Name
                  Value: !Ref AWS::StackName
    EIP3:
        Type: AWS::EC2::EIP
        Properties:
            Domain: !Ref VPC


    ####################################################################################################################
    # Private Route Tables
    ####################################################################################################################
    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Ref AWS::StackName
    PrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1
    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref PrivateSubnet1
            RouteTableId: !Ref PrivateRouteTable1

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Ref AWS::StackName
    PrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway2
    PrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref PrivateSubnet2
            RouteTableId: !Ref PrivateRouteTable2

    PrivateRouteTable3:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Ref AWS::StackName
    PrivateRoute3:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable3
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway3
    PrivateSubnet3RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref PrivateSubnet3
            RouteTableId: !Ref PrivateRouteTable3


    ####################################################################################################################
    # Public Route Tables
    ####################################################################################################################
    PublicRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Ref AWS::StackName
    PublicRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PublicRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway
    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref PublicSubnet1
            RouteTableId: !Ref PublicRouteTable1

    PublicRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Ref AWS::StackName
    PublicRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PublicRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway
    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref PublicSubnet2
            RouteTableId: !Ref PublicRouteTable2

    PublicRouteTable3:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Ref AWS::StackName
    PublicRoute3:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PublicRouteTable3
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway
    PublicSubnet3RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref PublicSubnet3
            RouteTableId: !Ref PublicRouteTable3


    ####################################################################################################################
    # Private Subnets
    ####################################################################################################################
    PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.1.0/24
            AvailabilityZone: !Select
                - 0
                - !GetAZs
                  Ref: AWS::Region
            Tags:
                - Key: Name
                  Value: "meetup-spot-instances-private-subnet-1a"
    PrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.2.0/24
            AvailabilityZone: !Select
                - 1
                - !GetAZs
                  Ref: AWS::Region
            Tags:
                - Key: Name
                  Value: "meetup-spot-instances-private-subnet-1b"
    PrivateSubnet3:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.3.0/24
            AvailabilityZone: !Select
                - 2
                - !GetAZs
                  Ref: AWS::Region
            Tags:
                - Key: Name
                  Value: "meetup-spot-instances-private-subnet-1c"


    ####################################################################################################################
    # Public Subnets
    ####################################################################################################################
    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.4.0/24
            AvailabilityZone: !Select
                - 0
                - !GetAZs
                  Ref: AWS::Region
            Tags:
                - Key: Name
                  Value: "meetup-spot-instances-public-subnet-1a"
    PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.5.0/24
            AvailabilityZone: !Select
                - 1
                - !GetAZs
                  Ref: AWS::Region
            Tags:
                - Key: Name
                  Value: "meetup-spot-instances-public-subnet-1b"
    PublicSubnet3:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.6.0/24
            AvailabilityZone: !Select
                - 2
                - !GetAZs
                  Ref: AWS::Region
            Tags:
                - Key: Name
                  Value: "meetup-spot-instances-public-subnet-1c"

Outputs:
    PrivateSubnet1ID:
        Value: !Ref PrivateSubnet1
    PrivateSubnet2ID:
        Value: !Ref PrivateSubnet2
    PrivateSubnet3ID:
        Value: !Ref PrivateSubnet3
    PublicSubnet1ID:
        Value: !Ref PublicSubnet1
    PublicSubnet2ID:
        Value: !Ref PublicSubnet2
    PublicSubnet3ID:
        Value: !Ref PublicSubnet3
    VPCID:
        Value: !Ref VPC
